[tool.poetry]
name = "optimiser-testing"
version = "0.1.0"
description = ""
authors = ["Felix Benning <felix.benning@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
jupyter = "^1.0.0"
notebook = "^6.4.11"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
